io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/legalstaticinitialization2/C.java
package io.hotmoka.examples.errors.legalstaticinitialization2;

public class C {
	public final static String s = "hello"; // legal with final
}